--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,4 @@
+@import "helpers";
 
 body {
   margin: 0;
@@ -17,9 +18,10 @@ body {
   height: 100%;
   width: 50%;
   color: white;
+  @include transition(all 0.6s);
 }
 .content-section.open {
-  width: 80%;
+  width: 85%;
 }
 
 .header-section {
@@ -28,7 +30,29 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  white-space: nowrap;
+
+  .content {
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+  }
+  .content::before {
+    content: '';
+    display: inline-block;
+    width: 50%;
+    @include transition(all 0.6s);
+  }
 }
+
+.header-section.open {
+  .content::before {
+    width: 80%;
+    @include transition(all 0.6s);
+  }
+}
+
+
 
 .vc-container::before {
   content: '';
