--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,14 +17,36 @@ body {
 .content-section {
   position: fixed;
   top: 0;
-  background-color: #851713;
+  //background-color: #851713;
+  background: url("../resources/profile.png") no-repeat center;
+  background-size: cover;
   height: 100%;
   width: 50%;
   color: white;
   @include transition(all 0.6s);
+
+  .bg-filter {
+    z-index: 1;
+    background: rgba(99,0,0, 0.2);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: inherit;
+    height: inherit;
+    @include transition(background 0.6s);
+  }
+
+  .vc-content {
+    z-index: 2;
+  }
 }
 .content-section.open {
   width: 85%;
+
+  .bg-filter {
+    background: rgba(99,0,0, 0.8);
+    @include transition(background 0.6s);
+  }
 }
 
 .header-section {
@@ -82,6 +104,7 @@ body {
 }
 
 .vc-content {
+  position: relative;
   display: inline-block;
   vertical-align: middle;
   width: 90%;
