--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,23 +2,23 @@
 
 body {
   margin: 0;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background: #EEE;
 }
 
 h1, h2, h3, h4 {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 700;
 }
 
 .title {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 3em;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2em;
   font-weight: 700;
 }
 
 p {
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: 300;
 }
 
@@ -55,7 +55,7 @@ hr {
   height: 100%;
   width: 50%;
   color: white;
-  @include transition(all 0.6s);
+  @include transition(all 0.6s 0.2s);
 
   .bg-filter {
     z-index: 1;
@@ -73,7 +73,7 @@ hr {
     margin: 50px 0 50px 5%;
     z-index: 2;
     opacity: 0;
-    @include transition(opacity 0.3s);
+    @include transition(opacity 0.2s);
   }
 
   .title {
@@ -82,9 +82,10 @@ hr {
 }
 .intro-content-section.open {
   width: 85%;
+  @include transition(all 0.6s);
 
   .bg-filter {
-    background: rgba(99,0,0, 0.8);
+    background: rgba(99,0,0, 0.7);
     @include transition(background 0.6s);
   }
 
@@ -111,7 +112,7 @@ hr {
     content: '';
     display: inline-block;
     width: 50%;
-    @include transition(all 0.6s);
+    @include transition(all 0.6s 0.2s);
   }
 }
 
@@ -181,7 +182,8 @@ hr {
 
     .subtext {
       font-style: italic;
-      font-size: 0.9em;
+      font-weight: 200;
+      font-size: 0.85em;
     }
   }
 }
@@ -190,7 +192,7 @@ hr {
 // --------------------------------------------------------------------------------------------------------------
 @media (min-width: 650px) {
   p {
-    font-size: 1.4em;
+    font-size: 1.15em;
   }
 
   hr {
@@ -198,7 +200,7 @@ hr {
   }
 
   .title {
-    font-size: 4em;
+    font-size: 3.5em;
   }
 
   .img-section {
@@ -229,7 +231,7 @@ hr {
       padding: 0 0 0 50px;
 
       .subtext {
-        font-size: 1em;
+        font-size: 0.9em;
       }
     }
   }
@@ -254,6 +256,10 @@ hr {
 @media (min-width: 960px) {
   .title {
     font-size: 5em;
+  }
+
+  p {
+    font-size: 1.2em;
   }
 
   .content-section {
