Handle mobile url bar resizing with pure css!

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -144,7 +144,7 @@ hr {
 .vc-container::before {
   content: '';
   display: inline-block;
-  height: 100%;
+  height: 100vh;
   vertical-align: middle;
 }
 .vc-content {
