Add TODOs for future notice

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,9 @@
 @import "helpers";
 
+// TODO use mixin for border-radius
+// TODO finalize colors for intro
+// TODO change colors to variables
+
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
