--- a/styles/index.scss
+++ b/styles/index.scss
@@ -227,18 +227,13 @@ img.profile {
 }
 
 .social-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
+  display: inline-block;
+  padding: 30px 30px 0 30px;
 
   .social-icon {
+    display: block;
     width: 50px;
-    padding-right: 40px;
-  }
-  .link {
-    min-width: 200px;
-    text-align: left;
+    margin: 0 auto;
   }
 }
 
