Add slanted dividers between sections and adjust content spacing.

--- a/styles/_helpers.scss
+++ b/styles/_helpers.scss
@@ -13,3 +13,11 @@
   -o-transform: $arg;
   transform: $arg;
 }
+
+@mixin transform-origin ($arg...) {
+  -webkit-transform-origin: $arg;
+  -moz-transform-origin: $arg;
+  -ms-transform-origin: $arg;
+  -o-transform-origin: $arg;
+  transform-origin: $arg;
+}
