--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,7 @@
 @import "helpers";
 
 // COLORS
+$off-white-color: #FAF8FD;
 $bg-color: #FAF8FD;
 $alt-bg-color: #CDCAD4;
 $dark-highlight-color: #514E58;
@@ -12,7 +13,7 @@ $dark-highlight-color: #514E58;
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background: $bg-color;
+  background: $off-white-color;
 }
 
 h1, h2, h3, h4 {
