--- a/styles/index.scss
+++ b/styles/index.scss
@@ -65,7 +65,7 @@ hr {
 .intro-content-section {
   position: fixed;
   top: 0;
-  background: url("../resources/profile.jpg") no-repeat center;
+  background: url("../resources/images/profile.jpg") no-repeat center;
   background-size: cover;
   height: 100vh;
   width: 60%;
@@ -299,13 +299,6 @@ img.profile {
 
   .title {
     font-size: 3.5em;
-  }
-
-  .sub-header-section {
-    height: 20vh;
-    line-height: 20vh;
-    background: url("../resources/pattern.png")  no-repeat fixed center;
-    background-size: cover;
   }
 
   .column-container {
