Update darker bg color to a darker gray.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,8 +3,8 @@
 // COLORS
 $off-white-color: #FAF8FD;
 $bg-color: #FAF8FD;
-$alt-bg-color: #CDCAD4;
-$dark-highlight-color: #514E58;
+$alt-bg-color: #A2A2A2;
+$dark-highlight-color: #525252;
 
 // TODO use mixin for border-radius
 // TODO finalize colors for intro
