--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,8 @@
 @import "helpers";
 
 // COLORS
-$off-white-color: #FAF8FD;
-$bg-color: #FAF8FD;
+$off-white-color: #F8F8F8;
+$bg-color: #F8F8F8;
 $alt-bg-color: #A2A2A2;
 $dark-highlight-color: #525252;
 
@@ -48,7 +48,7 @@ hr {
   border: 0;
   width: 50%;
   height: 2px;
-  background-color: $dark-highlight-color;
+  background-color: #000000;
   margin: 40px auto;
 }
 
