--- a/styles/index.scss
+++ b/styles/index.scss
@@ -52,6 +52,10 @@ hr {
   margin: 40px auto;
 }
 
+.spacer {
+  height: 3em;
+}
+
 .main-content {
   position: relative;
   overflow-x: hidden;
@@ -275,15 +279,39 @@ img.profile {
   }
 }
 
-.social-item {
-  display: inline-block;
-  padding: 30px 30px 0 30px;
+.social-column-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
-  .social-icon {
-    display: block;
-    width: 50px;
-    margin: 0 auto;
+  .social-column {
+    display: inline-block;
+    align-self: center;
+    text-align: right;
+
+    .social-item {
+      padding: 15px 25px;
+      text-decoration: underline;
+    }
   }
+  .social-column:last-of-type {
+    text-align: left;
+  }
+  .vh {
+    display: inline-block;
+    width: 1px;
+    height: 100px;
+    background: #000000;
+  }
+}
+
+.footer {
+  background: $dark-highlight-color;
+  font-size: 0.8em;
+  text-align: right;
+  color: white;
+  padding: 5px 15px;
 }
 
 // Tablet and bigger
