--- a/styles/index.scss
+++ b/styles/index.scss
@@ -69,7 +69,7 @@ hr {
 .intro-content-section {
   position: fixed;
   top: 0;
-  background: url("../resources/images/profile.jpg") no-repeat center;
+  background: rgb(70,0,0) url("../resources/images/profile.jpg") no-repeat center;
   background-size: cover;
   height: 100vh;
   width: 60%;
