--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,8 +3,8 @@
 // COLORS
 $off-white-color: #F8F8F8;
 $bg-color: #F8F8F8;
-$alt-bg-color: #A2A2A2;
-$dark-highlight-color: #525252;
+$alt-bg-color: #C5C5C5;
+$dark-highlight-color: #727272;
 
 // TODO use mixin for border-radius
 // TODO finalize colors for intro
@@ -264,6 +264,11 @@ img.profile {
       max-width: 320px;
       background: #000;
       @include shadow-standard;
+    }
+    .thumblink {
+      display: inline-block;
+      font-size: 0.85em;
+      margin: 10px 0;
     }
   }
 
