--- a/styles/index.scss
+++ b/styles/index.scss
@@ -268,13 +268,17 @@ img.profile {
     .thumblink {
       display: inline-block;
       font-size: 0.85em;
-      margin: 10px 0;
+      margin-top: 10px;
     }
   }
 
   .description {
     text-align: left;
     order: 2;
+
+    h2 {
+      margin-top: 0;
+    }
 
     .subtext {
       font-style: italic;
