--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@ $off-white-color: #F8F8F8;
 $bg-color: #F8F8F8;
 $alt-bg-color: #C5C5C5;
 $dark-highlight-color: #555555;
+$bg-filter-color: #460000;
 
 // TODO use mixin for border-radius
 // TODO finalize colors for intro
@@ -69,15 +70,15 @@ hr {
 .intro-content-section {
   position: fixed;
   top: 0;
-  background: rgb(70,0,0) url("../resources/images/profile.jpg") no-repeat center;
+  background: $bg-filter-color url("../resources/images/profile-portrait.jpg") no-repeat center; // load mobile img first
   background-size: cover;
   height: 100vh;
   width: 60%;
   color: white;
   @include transition(all 0.6s 0.2s);
 
-  @media screen and (orientation:portrait) {
-    background: rgb(70,0,0) url("../resources/images/profile-portrait.jpg") no-repeat center;
+  @media screen and (orientation:landscape) {
+    background: $bg-filter-color url("../resources/images/profile.jpg") no-repeat center;
     background-size: cover;
   }
 
@@ -109,7 +110,7 @@ hr {
   @include transition(all 0.6s);
 
   .bg-filter {
-    background: rgba(70,0,0, 0.85);
+    background: transparentize($bg-filter-color, 0.15);
     @include transition(background 0.6s);
   }
 
