--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,9 +3,10 @@
 // COLORS
 $off-white-color: #F8F8F8;
 $bg-color: #F8F8F8;
-$alt-bg-color: #C5C5C5;
-$dark-highlight-color: #555555;
-$bg-filter-color: #460000;
+$alt-bg-color: #C0C5C5;
+$dark-highlight-color: #505755;
+$bg-filter-color: #0e2518;
+// $bg-filter-color: #153d27;
 
 // TODO use mixin for border-radius
 // TODO finalize colors for intro
@@ -26,6 +27,7 @@ h1, h2, h3, h4 {
   font-family: 'Playfair Display SC', serif;
   font-size: 2em;
   font-weight: 700;
+  opacity: 0.9;
 }
 
 p {
@@ -110,7 +112,7 @@ hr {
   @include transition(all 0.6s);
 
   .bg-filter {
-    background: transparentize($bg-filter-color, 0.15);
+    background: transparentize($bg-filter-color, 0.12);
     @include transition(background 0.6s);
   }
 
