--- a/styles/index.scss
+++ b/styles/index.scss
@@ -93,11 +93,18 @@ hr {
   height: 100vh;
   width: 60%;
   color: white;
+  -webkit-box-shadow: inset -20px 0 40px -20px black;
+  -moz-box-shadow: inset -20px 0 40px -20px black;
+  box-shadow: inset -20px 0 40px -20px black;
   @include transition(all 0.6s 0.2s);
 
   @media screen and (orientation:landscape) {
     background: $bg-filter-color url("../resources/images/profile.jpg") no-repeat center;
     background-size: cover;
+    
+    -webkit-box-shadow: inset -50px 0 36px -27px black;
+    -moz-box-shadow: inset -50px 0 36px -27px black;
+    box-shadow: inset -50px 0 36px -27px black;
   }
 
   .bg-filter {
