--- a/styles/index.scss
+++ b/styles/index.scss
@@ -88,7 +88,7 @@ hr {
 .intro-content-section {
   position: fixed;
   top: 0;
-  background: $bg-filter-color url("../resources/images/profile-portrait.jpg") no-repeat center; // load mobile img first
+  background: transparentize($bg-filter-color, 0.5) url("../resources/images/profile-portrait.jpg") no-repeat center; // load mobile img first
   background-size: cover;
   height: 100vh;
   width: 60%;
@@ -99,7 +99,7 @@ hr {
   @include transition(all 0.6s 0.2s);
 
   @media screen and (orientation:landscape) {
-    background: $bg-filter-color url("../resources/images/profile.jpg") no-repeat center;
+    background: transparentize($bg-filter-color, 0.5) url("../resources/images/profile.jpg") no-repeat center;
     background-size: cover;
     
     -webkit-box-shadow: inset -50px 0 36px -27px black;
@@ -109,7 +109,7 @@ hr {
 
   .bg-filter {
     z-index: 1;
-    background: rgba(99,0,0, 0.2);
+    background: rgba(15, 20, 0, 0.25);
     position: fixed;
     top: 0;
     left: 0;
